# mitra-bot

./: .bandit  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .slugignore  .vercelignore  Dockerfile  IMPROVEMENTS_SUMMARY.md  Jenkinsfile  Makefile  Procfile  README.md  README_ADVANCED.md  VERCEL_DEPLOYMENT.md  app.py  cleanup_database.py  debug_documents.py  debug_search.py  docker-compose.prod.yml  docker-compose.yml  document_manager.py  gunicorn_config.py  pyproject.toml  railway.json  render.yaml  requirements-local.txt  requirements-minimal.txt  requirements-production.txt  requirements-vercel.txt  requirements.txt  run_bot.py  sam_bot.db  sam_bot_production.db  sam_bot_production_backup_20250905_121355.db  setup.py  setup_production.py  simple_cleanup.py  start-production.sh  (+4 more)
.github/workflows/: ci.yml
api/: index.py
deployment/: sam-deployment.yaml  task-definition.json
docker/: Dockerfile  docker-compose.yml
frontend/: auth.html  index.html  vercel.json
frontend/css/: components.css  responsive.css  styles.css  themes.css
frontend/js/: api.js  auth.js  chat.js  config.js  main.js  mobile.js  oauth-config.example.js  oauth-config.js  ui.js
src/: .env.example  advanced_api.py  api.py  app.py  auth_manager.py  database.py  database_manager.py  document_processor.py  embeddings.py  models.py  rag_processor.py  sam_bot.db  simple_api.py
src/api/: main_api.py
src/models/: __init__.py  database_models.py
src/services/: conversation_service.py  document_service.py  knowledge_service.py
src/utils/: logger.py
templates/: admin_dashboard.html  index.html
